Merge branch 'dpmd' into 'main'
Fix warnings in desktop tests

See merge request ggb/geogebra!10637

GitOrigin-RevId: bdc002251a04b3e8de06bf4db31b40ec05ac04f2